# powerbi-mcp-local

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  EXCEL_SPEC.md  README.md  SECURITY.md  VISUAL_SPEC.md  pbi_connection.py  pyproject.toml  requirements.txt  security.py  server.py  test_connection.py  test_excel.py  test_power_query.py  test_security.py  test_visuals.py
.claude_plugin/: commands.md  plugins.md
.github/workflows/: ci.yml
docs/: SETUP.md  WINDOWS_SETUP.md
specs/: VISUAL_SPEC.md
src/: __init__.py  m_expression_security.py  pbi_connection.py  security.py  server.py
src/tools/: __init__.py  calc_groups.py  measures.py  model.py  persistent_report.py  power_query.py  project.py  quality.py  query.py  relationships.py  rls.py  visuals.py  workflows.py
tests/: conftest.py  test_connection.py  test_excel.py  test_power_query.py  test_query.py  test_security.py  test_visuals.py
tools/: __init__.py  excel.py  measures.py  model.py  power_query.py  query.py  relationships.py  visuals.py
